# xaviduds

./: .README.md  .gitignore  Cargo.toml  Makefile  README.md  index.html  justfile  package-lock.json  package.json  style.css  vite.config.js
.github/workflows/: rust.yml
js/: sortable.js  sortableMain.js
src/: main.rs
src/components/: education.rs  experience.rs  footer.rs  header.rs  main.rs  mod.rs  profession.rs  projects.rs  stack.rs
src/components/main/: main.rs  mod.rs  presentation.rs  projects.rs  stack.rs
src/general/: body.rs  datastar.rs  html.rs  mod.rs
src/presentation/: mod.rs
src/presentation/components/: mod.rs
src/presentation/components/general/: mod.rs  mouse.rs
src/presentation/components/header/: about.rs  card.rs  controls.rs  header.rs  mod.rs  projects.rs  social.rs
src/presentation/components/main/: education.rs  experience.rs  main.rs  mod.rs  projects.rs  stack.rs  stack_wasm.rs  test.rs
src/presentation/general/: html.rs  mod.rs
src/presentation/general/vendoring/: framework.rs
src/schema/: experience.rs  mod.rs  project.rs  tech.rs
stack_wasm/: wasm_example.d.ts  wasm_example.js
